# faculty-tg-bot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.yaml  docker-compose.yml  main.py  pyproject.toml  qa-test-set.yaml  requirements.txt  restart_bot.sh  resume.sh  setup.sh  stop.sh  test.sh  test_prompt_save.py
chroma_db/: chroma.sqlite3
config/: config.yaml
doc/diagrams/: best.md  final.md  medium.md  mvp.md
docs/: tests_matrix_description.md
docs/diagrams/: architecture_high_level.md
src/: di_containers.py  index_pipeline.py  query_pipeline.py  rag_bot.py  run_bot.py
src/components/: index_pipeline.py  query_pipeline.py  rag_bot.py
src/config/: prompts.py  prompts_old.py
src/core/: interfaces.py
src/evaluation/: evaluate.py  evaluate_retrieval.py  matrix_runner.py  metrics.py  prompts.py  runner.py  schemas.py
src/interfaces/: chunker_interfaces.py  data_processor_interfaces.py
src/parsing_and_chunking/: configurable_processor.py  markdown_processor.py  unstructured_processor.py
src/parsing_and_chunking/chunkers/: advanced_html_chunker.py  html_context_chunker.py  parent_child_chunker.py  semantic_html_chunker.py
src/pipelines/: indexing.py  rag.py
src/pipelines/indexing/: pipeline.py
src/pipelines/rag/: pipeline.py  timed_wrappers.py
src/retrievers/: async_ensemble_retriever.py  chroma_bm25.py  e5_query_embeddings.py  hybrid_retriever_factory.py  hyde_retriever.py  hyde_trace_context.py  parent_document_retriever.py  qdrant_retriever.py  rerankers.py
src/runners/: run_bot.py  run_retriver.py
src/strategies/: chunkers.py  retrievers.py
src/tg_bot/: server-startup.py
src/tg_bot/db/: base.py  (+6 more)
src/util/: callbacks.py  hf_embeddings.py  http_fetch.py  text_processing.py  yaml_parser.py
(+19 files in other folders)
